# StockPredictor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
config/: settings.yaml
scripts/: fetch_history.py  fetch_news.py
src/trading_copilot/: config.py  logging_setup.py
src/trading_copilot/alerts/: __init__.py  formatter.py  telegram_bot.py
src/trading_copilot/backtest/: __init__.py  engine.py  report.py  types.py
src/trading_copilot/dashboard/: __init__.py  app.py  charts.py
src/trading_copilot/data/: __init__.py  cache.py  fetcher.py  models.py
src/trading_copilot/explain/: __init__.py  narrative.py  plots.py  shap_explain.py
src/trading_copilot/features/: __init__.py  calendar.py  momentum.py  pipeline.py  sentiment.py  target.py  technical.py
src/trading_copilot/indicators/: __init__.py  core.py  engine.py  signals.py
src/trading_copilot/models/: __init__.py  engine.py  trainers.py  validation.py
src/trading_copilot/news/: __init__.py  models.py  scraper.py  sources.py  store.py
src/trading_copilot/nlp/: __init__.py  engine.py  events.py  finbert.py  models.py  textblob_analyzer.py  ticker_extract.py  vader.py
src/trading_copilot/signals/: __init__.py  generator.py  rules.py
tests/: test_alerts.py  test_backtest.py  test_cache.py  test_config.py  test_dashboard.py  test_explain.py  test_features.py  test_fetcher.py  test_indicators.py  test_logging_setup.py  test_models.py  test_news.py  test_nlp.py  test_signals.py
