[project]
name = "trading-copilot"
version = "0.1.0"
description = "AI market-intelligence and probabilistic directional-prediction copilot (NSE/BSE/US)."
readme = "README.md"
requires-python = ">=3.11"

# Phase 1 ships only the dependencies needed for config + logging + tests.
# Each subsequent phase will add its own deps deliberately, not all up-front.
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "vaderSentiment>=3.3",
    "textblob>=0.18",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "joblib>=1.3",
    "streamlit>=1.35",
    "plotly>=5.22",
    "shap>=0.45",
]

[project.optional-dependencies]
finbert = [
    "transformers>=4.40",
    "torch>=2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_copilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # handled by formatter
